fix grab cursor not showing in chrome.

--- a/includes/builder/assets/page-builder.css
+++ b/includes/builder/assets/page-builder.css
@@ -35,7 +35,12 @@
 	cursor: pointer;
 }
 .fxb-grab{
+	cursor: -webkit-grab;
 	cursor: grab;
+}
+.fxb-grabbing{
+	cursor: -webkit-grabbing;
+	cursor: grabbing;
 }
 
 
